A bit of improvement

--- a/src/index.jade
+++ b/src/index.jade
@@ -14,7 +14,7 @@ html(lang="EN")
 
 
 	body
-		include ./jade/header
+		include ./jade/header.jade
 
 		include ./jade/scripts.jade
 		include ./jade/ie_fix.jade
