Added Languages and Education block

--- a/src/css/_var.sass
+++ b/src/css/_var.sass
@@ -1,8 +1,9 @@
 $color-body-background: #EEEEEE
 $color-main: #212121
-$color-main-ligten: #BDBDBD
+$color-main-lighten: #BDBDBD
+
 $color-text: #FFFFFF
-$color-text-footer: #EEEEEE
+$color-text-darken: #757575
 
 $font-base: 'Roboto', sans-serif
 $font-weight: 300
