--- a/src/index.jade
+++ b/src/index.jade
@@ -15,6 +15,7 @@ html(lang="EN")
 
 	body
 		include ./jade/header.jade
+		include ./jade/languages_and_education.jade
 
 		include ./jade/scripts.jade
 		include ./jade/ie_fix.jade
