--- a/src/index.jade
+++ b/src/index.jade
@@ -4,7 +4,7 @@ doctype html
 html(lang="EN")
 	head
 		block title
-			title Denis Covaliuc - Front-end Developer
+			title Denis Covaliuc - Student
 
 		block head_meta
 			include ./jade/head_meta.jade
@@ -16,6 +16,7 @@ html(lang="EN")
 	body
 		include ./jade/header.jade
 		include ./jade/languages_and_education.jade
+		include ./jade/skills_and_interests.jade
 
 		include ./jade/scripts.jade
 		include ./jade/ie_fix.jade
