--- a/src/jade/header.jade
+++ b/src/jade/header.jade
@@ -6,7 +6,7 @@ header.introduction
 					img(src="./img/my_photo.jpg")
 					.description
 						h1.name Denis Covaliuc
-						p.occupation Front-End Developer
+						p.occupation Student
 
 			.col-md-1
 			.col-md-6
