--- a/src/jade/languages_and_education.jade
+++ b/src/jade/languages_and_education.jade
@@ -31,7 +31,7 @@
 
 		.col-md-6.education-block.text-align-to-right
 			h2 Education
-			.container.education-container.container-with-no-padding
+			section.container.education-container.container-with-no-padding
 				.row
 					.col
 						article
