Added other sections

--- a/src/css/_media.sass
+++ b/src/css/_media.sass
@@ -5,15 +5,41 @@
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px)
-	/**/
+	header.introduction
+		.portrait
+			img
+				width: 278px
+				height: 278px
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
-	//
+	header.introduction
+		.portrait
+			img
+				width: 178px
+				height: 178px
+
+	.skills-block
+		.skills-table
+			width: 100%
 
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
+	header.introduction
+		.portrait
+			margin: 50px 0
+			img
+				width: 418px
+				height: 418px
+		.description
+			margin-bottom: 50px
+
+	.text-align-to-right
+		text-align: left
+		margin-top: 50px
+		margin-bottom: 0
+
 	/*Disable Animation on Mobile Devices*/
 	.animated
 		/*CSS transitions*/
@@ -38,11 +64,23 @@
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
+	header.introduction
+		.portrait
+			margin: 50px 0
+			img
+				width: 238px
+				height: 238px
 	/**/
 
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
+	header.introduction
+		.portrait
+			margin: 50px 0
+			img
+				width: 198px
+				height: 198px
 	/**/
 
 
@@ -55,20 +93,42 @@
 
 /* Extra Small Devices, Phones */
 @media only screen and (min-width : 480px)
+	header.introduction
+		.portrait
+			margin: 50px 0
+			img
+				width: 238px
+				height: 238px
 	/**/
 
 
 /* Small Devices, Tablets */
 @media only screen and (min-width : 768px)
+	header.introduction
+		.portrait
+			margin: 50px 0
+			img
+				width: 178px
+				height: 178px
 	/**/
 
 
 /* Medium Devices, Desktops */
 @media only screen and (min-width : 992px)
+	header.introduction
+		.portrait
+			img
+				width: 278px
+				height: 278px
 	/**/
 
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px)
+	header.introduction
+		.portrait
+			img
+				height: 355px
+				width: 355px
 	/**/
 
