--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -162,6 +162,9 @@ h2
 			color: $color-text-darken
 
 .skills-block
+	.skills-table:last-child
+		margin-bottom: 20px
+
 	.skills-table
 		margin-top: 16px
 		width: 66%
@@ -227,7 +230,35 @@ h2
 					font-weight: $font-weight-bold
 					text-transform: uppercase
 					text-align: center
-					display: block
+
+
+.projects-row
+	margin-top: 20px
+
+.project-container
+	.image-container
+		margin-bottom: 6px
+	.title
+		font-weight: $font-weight-bold
+		text-transform: uppercase
+		text-align: center
+
+.footer-container
+	background: $color-main
+	margin-top: 20px
+
+	.text
+		color: $color-text
+		text-transform: uppercase
+		text-align: center
+
+		margin: 20px 0
+		font-size: em(12px, $font-size-base)
+
+		a
+			color: $color-text
+			font-weight: $font-weight-bold
+
 
 
 //ALWAYS END
