--- a/src/index.jade
+++ b/src/index.jade
@@ -17,6 +17,8 @@ html(lang="EN")
 		include ./jade/header.jade
 		include ./jade/languages_and_education.jade
 		include ./jade/skills_and_interests.jade
+		include ./jade/projects.jade
+		include ./jade/footer.jade
 
 		include ./jade/scripts.jade
 		include ./jade/ie_fix.jade
