--- a/src/jade/header.jade
+++ b/src/jade/header.jade
@@ -3,7 +3,7 @@ header.introduction
 		.row.align-items-center
 			.col-md-5
 				section.portrait
-					img(src="./img/my_photo.jpg")
+					img(src="./img/my_photo.jpg").img-fluid
 					.description
 						h1.name Denis Covaliuc
 						p.occupation Student
@@ -13,7 +13,7 @@ header.introduction
 				section.description
 					article.about-me
 						h2 About me
-						p I’m 18, live in Moldova, wanna become a fullstack web-developer. I’m studying now. My favorite language is Python. Also now I wanna be a front-end developer...
+						p I’m 18, live in Moldova, I want to become a fullstack web-developer. I’m studying now. My favorite language is Python. Also now I wanna be a front-end developer...
 
 					hr
 
@@ -29,13 +29,13 @@ header.introduction
 						ul.other-info
 							li
 								strong VK:
-								a(href="#", target="_blank") @powerslime
+								a(href="https://vk.com/powerslime", target="_blank") @powerslime
 							li
 								strong Telegram:
-								a(href="#", target="_blank") @powerslime
+								a(href="https://t.me/powerslime", target="_blank") @powerslime
 							li
 								strong GitHub:
-								a(href="#", target="_blank") @powerslime
+								a(href="https://github.com/PowerSlime", target="_blank") @powerslime
 							li
 								strong E-Mail:
-								a(href="#", target="_blank") powerslime@ya.ru
+								a(href="mailto:powerslime@ya.ru") powerslime@ya.ru
