--- a/src/jade/mixins.jade
+++ b/src/jade/mixins.jade
@@ -1,5 +1,5 @@
 mixin add_language(language, rating)
-	.col-md-3.col-sm-3.col-3
+	.col-xl-3.col-lg-4.col-md-4.col-sm-4.col-4
 		.language
 			.lang= language
 			.lang-progress= rating
