A bit of changes in text about languges

--- a/src/jade/languages_and_education.jade
+++ b/src/jade/languages_and_education.jade
@@ -14,7 +14,7 @@
 							p.
 								Russian is my native language. English is “language of work”, also I like it so
 								much. Romanian for me is a bit harder than English, only because I don’t use
-								it so much as English...
+								it so much...
 							p.
 								I want to know English as good as Russian. It will give me a possibility to speak
 								easier with other people.
