Zooming header image on click

--- a/src/jade/header.jade
+++ b/src/jade/header.jade
@@ -3,7 +3,8 @@ header.introduction
 		.row.align-items-center
 			.col-md-5
 				section.portrait
-					img(src="./img/my_photo.jpg").img-fluid
+					a(href="./img/my_photo.jpg", data-fancybox='gallery')
+						img(src="./img/my_photo.jpg")
 					.description
 						h1.name Denis Covaliuc
 						p.occupation Student
