--- a/src/index.jade
+++ b/src/index.jade
@@ -11,6 +11,7 @@ html(lang="EN")
 
 		block head_custom_css
 			link(rel="stylesheet", href="./css/main.min.css")
+			link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css")
 
 
 	body
