--- a/src/jade/footer.jade
+++ b/src/jade/footer.jade
@@ -4,4 +4,4 @@
 			.col-md-12
 				p.text.
 					Designed by <a href='https://github.com/PowerSlime', target='_blank'>me</a>.
-					You can see all the sources <a href='https://github.com/PowerSlime/powerslime.github.io', target='_blank'>here</a>.
+					You can check all the sources <a href='https://github.com/PowerSlime/powerslime.github.io', target='_blank'>here</a>.
