--- a/src/css/_media.sass
+++ b/src/css/_media.sass
@@ -113,6 +113,11 @@
 							width: 127px
 							height: 127px
 
+@media only screen and (max-width : 380px)
+	.footer-container
+		.text
+			font-size: em(10px, $font-size-base)
+
 @media only screen and (max-width : 370px)
 	.interests-block
 		.interests-list
