--- a/src/jade/projects.jade
+++ b/src/jade/projects.jade
@@ -4,8 +4,8 @@
 
 	.row.projects-row
 		.col-md-4
-			+add_project('Sample one', '#', 'https://placehold.it/1920x1080')
+			+add_project('Artist template', '//powerslime.github.io/template_mihaela_dreglea_art/', './img/artist_template.jpg')
 		.col-md-4
-			+add_project('Sample two', '#', 'https://placehold.it/1920x1080')
+			+add_project('Starter template', '//github.com/PowerSlime/starter_template', './img/starter_template.jpg')
 		.col-md-4
-			+add_project('Sample three', '#', 'https://placehold.it/1920x1080')
+			+add_project('This page', '//powerslime.github.io', './img/powerslime.github.io.jpg')
