--- a/src/jade/skills_and_interests.jade
+++ b/src/jade/skills_and_interests.jade
@@ -31,7 +31,7 @@
 				.col-md-12
 					.custom-flex
 						ul.interests-list
-							+add_interest('https://placehold.it/100x100', 'Click ^_^')(custom_class='magic', custom_text='Anime')
-							+add_interest('https://placehold.it/100x100', 'Photography')
-							+add_interest('https://placehold.it/100x100', 'Design')
-							+add_interest('https://placehold.it/100x100', 'Programming')
+							+add_interest('./img/magic.jpg', 'Click ^_^')(custom_class='magic', custom_text='Anime')
+							+add_interest('./img/photography.jpg', 'Photography')
+							+add_interest('./img/design.jpg', 'Design')
+							+add_interest('./img/programming.jpg', 'Programming')
