--- a/src/css/main.sass
+++ b/src/css/main.sass
@@ -131,6 +131,7 @@ h2
 
 
 .languages-container
+	margin-top: 6px
 	.language
 		text-transform: uppercase
 		text-align: center
@@ -145,6 +146,7 @@ h2
 
 
 .education-container
+	margin-top: 6px
 	ul.school
 		text-transform: uppercase
 		padding: 0
