Deleted one sentence in header

--- a/src/jade/header.jade
+++ b/src/jade/header.jade
@@ -14,7 +14,7 @@ header.introduction
 				section.description
 					article.about-me
 						h2 About me
-						p I’m 18, live in Moldova, I want to become a fullstack web-developer. I’m studying now. My favorite language is Python. Also now I wanna be a front-end developer...
+						p I’m 18, live in Moldova, I want to become a fullstack web-developer. My favorite language is Python. Also now I wanna be a front-end developer...
 
 					hr
 
