Link changed to github repository

--- a/src/jade/projects.jade
+++ b/src/jade/projects.jade
@@ -8,4 +8,4 @@
 		.col-md-4
 			+add_project('Starter template', '//github.com/PowerSlime/starter_template', './img/starter_template.jpg')
 		.col-md-4
-			+add_project('This page', '//powerslime.github.io', './img/powerslime.github.io.jpg')
+			+add_project('This page', '//github.com/PowerSlime/powerslime.github.io', './img/powerslime.github.io.jpg')
