A bit of cleaning

--- a/src/jade/head_meta.jade
+++ b/src/jade/head_meta.jade
@@ -14,3 +14,6 @@ link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-bet
 
 //- The font
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,700&amp;subset=cyrillic" rel="stylesheet">
+
+//- Fancy Box
+link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.css")
