--- a/src/jade/mixins.jade
+++ b/src/jade/mixins.jade
@@ -10,7 +10,7 @@ mixin add_skill(language, rating)
 
 	tr
 		td.skill= language
-		td.rating_row
+		td.rating-row
 			ul.rating-list
 				- for (var active = 1; active <= rating[0]; active++)
 					li.rating.active
