--- a/src/jade/scripts.jade
+++ b/src/jade/scripts.jade
@@ -6,5 +6,6 @@ script(src="//code.jquery.com/jquery-3.3.1.min.js")
 //- FancyBox
 script(src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.3.5/jquery.fancybox.min.js")
 
-//- Custom script
+//- Custom scripts
 script(src="./show-magic.js")
+script(src="./translate.js")
