--- a/src/jade/footer.jade
+++ b/src/jade/footer.jade
@@ -2,6 +2,4 @@
 	.container
 		.row.footer
 			.col-md-12
-				p.text.
-					Designed by <a href='https://github.com/PowerSlime', target='_blank'>me</a>.
-					You can check all the sources <a href='https://github.com/PowerSlime/powerslime.github.io', target='_blank'>here</a>.
+				p.text(data-translate-id='footer-info')
