Add new project

--- a/src/jade/projects.jade
+++ b/src/jade/projects.jade
@@ -2,7 +2,9 @@
 	.row.justify-content-center
 		h2(data-translate-id="projects-header")
 
-	.row.projects-row
+	.row.projects-row.justify-content-center
+		.col-md-4
+			+add_project('Magic of Gods Landing', '//play.magicofgods.ru/', './img/play.magicofgods.jpg', 'project-magicofgods')
 		.col-md-4
 			+add_project('Artist template', '//powerslime.github.io/template_mihaela_dreglea_art/', './img/artist_template.jpg', 'project-artist')
 		.col-md-4
