Update skills and projects

--- a/src/jade/projects.jade
+++ b/src/jade/projects.jade
@@ -4,6 +4,8 @@
 
 	.row.projects-row.justify-content-center
 		.col-md-4
+			+add_project('[React] DeerIO Enchanted', '//powerslime.github.io/deer/', './img/DeerIO.jpg', 'project-deerio')
+		.col-md-4
 			+add_project('Magic of Gods Landing', '//play.magicofgods.ru/', './img/play.magicofgods.jpg', 'project-magicofgods')
 		.col-md-4
 			+add_project('Artist template', '//powerslime.github.io/template_mihaela_dreglea_art/', './img/artist_template.jpg', 'project-artist')
