--- a/src/jade/skills_and_interests.jade
+++ b/src/jade/skills_and_interests.jade
@@ -9,17 +9,20 @@
 				.col-md-12
 					table.skills-table
 						+add_skill('Python', [3, 5])
-						+add_skill('HTML/CSS', [4, 5])
-						+add_skill('Bootstrap', [3, 5])
-						+add_skill('jQuery', [3, 5])
-						+add_skill('JavaScript', [2, 5])
+						+add_skill('JavaScript (ES5/ES6)', [3, 5])
+						+add_skill('React', [2, 5])
 
 					table.skills-table
-						+add_skill('Git', [3, 5])
-						+add_skill('Jade', [4, 5])
+						+add_skill('HTML/CSS', [4, 5])
+						+add_skill('Bootstrap', [4, 5])
+						+add_skill('jQuery', [3, 5])
+
+					table.skills-table
+						+add_skill('Jade (Pug)', [4, 5])
 						+add_skill('SASS', [3, 5])
 
 					table.skills-table
+						+add_skill('Git', [3, 5])
 						+add_skill('StackOverflow', [5, 5])
 
 		//- Interests
