Update homepage info

--- a/src/jade/languages_and_education.jade
+++ b/src/jade/languages_and_education.jade
@@ -21,11 +21,11 @@
 					.col
 						article
 							ul.school
-								li.date 01/09/2015
+								li.date 09/2015 - 06/2019
 								li.name Colegiul Politehnic
 								li.place Balti, Moldova
 
 							ul.school
-								li.date 01/09/2006 - 31/05/2015
+								li.date 09/2006 - 05/2015
 								li.name Liceum A. S. Puskin
 								li.place Falesti, Moldova
